add a .cc file for fixtures/sugar_fixtures

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -12,7 +12,8 @@ unit_fwdpp_unit_tests_SOURCES=unit/fwdpp_unit_tests.cc unit/mutateTest.cc unit/g
 	unit/test_mutate_recombine.cc unit/test_sampling.cc \
 	unit/test_simparams.cc \
 	unit/test_wrapped_range.cc \
-	fixtures/multilocus_fixture_deterministic.cc
+	fixtures/multilocus_fixture_deterministic.cc \
+	fixtures/sugar_fixtures.cc
 
 unit_extensions_unit_tests_SOURCES=unit/extensions_unit_test.cc unit/extensions_regionsTest.cc unit/extensions_callbacksTest.cc
 unit_sugar_unit_tests_SOURCES=unit/sugar_unit_tests.cc \
@@ -20,12 +21,15 @@ unit_sugar_unit_tests_SOURCES=unit/sugar_unit_tests.cc \
 	unit/sugar_add_mutationTest.cc \
 	unit/sugar_change_neutralTest.cc \
 	unit/sugar_construct_pops.cc \
-	unit/sugar_popgenmut.cc
+	unit/sugar_popgenmut.cc \
+	fixtures/sugar_fixtures.cc
 
 #Integration test targets:
-integration_sugar_integration_tests_SOURCES=integration/sugar_integration_tests.cc integration/sugar_multilocusTest.cc  integration/sugar_singlepop_custom_diploidTest.cc  integration/sugar_singlepopTest.cc
+integration_sugar_integration_tests_SOURCES=integration/sugar_integration_tests.cc integration/sugar_multilocusTest.cc  integration/sugar_singlepop_custom_diploidTest.cc  integration/sugar_singlepopTest.cc \
+	fixtures/sugar_fixtures.cc
 
-integration_extensions_integration_tests_SOURCES=integration/extensions_integration_tests.cc integration/extensions_regionsIntegrationTest.cc
+integration_extensions_integration_tests_SOURCES=integration/extensions_integration_tests.cc integration/extensions_regionsIntegrationTest.cc \
+	fixtures/sugar_fixtures.cc
 
 tree_sequences_tree_sequence_tests_SOURCES=tree_sequences/tree_sequence_tests.cc tree_sequences/test_generate_offspring.cc \
 	fixtures/multilocus_fixture_deterministic.cc
