--- a/examples/Makefile.in
+++ b/examples/Makefile.in
@@ -153,8 +153,9 @@ am__spatialts_SOURCES_DIST = spatialts.cc
 @BPO_PRESENT_TRUE@am_spatialts_OBJECTS = spatialts.$(OBJEXT)
 spatialts_OBJECTS = $(am_spatialts_OBJECTS)
 spatialts_DEPENDENCIES =
-am__wfmlts_SOURCES_DIST = wfmlts.cc
-@BPO_PRESENT_TRUE@am_wfmlts_OBJECTS = wfmlts.$(OBJEXT)
+am__wfmlts_SOURCES_DIST = wfmlts.cc tree_sequence_examples_common.cc
+@BPO_PRESENT_TRUE@am_wfmlts_OBJECTS = wfmlts.$(OBJEXT) \
+@BPO_PRESENT_TRUE@	tree_sequence_examples_common.$(OBJEXT)
 wfmlts_OBJECTS = $(am_wfmlts_OBJECTS)
 wfmlts_DEPENDENCIES =
 am__wfts_SOURCES_DIST = wfts.cc tree_sequence_examples_common.cc
@@ -359,7 +360,7 @@ custom_mutation_SOURCES = custom_mutation.cc common_ind.hpp
 custom_diploid_SOURCES = custom_diploid.cc common_ind.hpp
 @BPO_PRESENT_TRUE@wfts_SOURCES = wfts.cc tree_sequence_examples_common.cc
 @BPO_PRESENT_TRUE@wfts_LDADD = -lboost_program_options
-@BPO_PRESENT_TRUE@wfmlts_SOURCES = wfmlts.cc
+@BPO_PRESENT_TRUE@wfmlts_SOURCES = wfmlts.cc tree_sequence_examples_common.cc
 @BPO_PRESENT_TRUE@wfmlts_LDADD = -lboost_program_options
 @BPO_PRESENT_TRUE@spatialts_SOURCES = spatialts.cc
 @BPO_PRESENT_TRUE@spatialts_LDADD = -lboost_program_options
