documentation updates and some build system fixes

--- a/fwdpp/gsl/Makefile.am
+++ b/fwdpp/gsl/Makefile.am
@@ -1,3 +1,3 @@
-pkgincludedir=$(prefix)/include/fwdpp/sugar/gsl
+pkgincludedir=$(prefix)/include/fwdpp/gsl
 
 pkginclude_HEADERS=tags.hpp deleter.hpp
