--- a/fwdpp/gsl/Makefile.in
+++ b/fwdpp/gsl/Makefile.in
@@ -166,7 +166,7 @@ ETAGS = etags
 CTAGS = ctags
 am__DIST_COMMON = $(srcdir)/Makefile.in
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
-pkgincludedir = $(prefix)/include/fwdpp/sugar/gsl
+pkgincludedir = $(prefix)/include/fwdpp/gsl
 ACLOCAL = @ACLOCAL@
 AMTAR = @AMTAR@
 AM_DEFAULT_VERBOSITY = @AM_DEFAULT_VERBOSITY@
