--- a/fwdpp/Makefile.in
+++ b/fwdpp/Makefile.in
@@ -307,7 +307,7 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-SUBDIRS = internal tags sugar gsl extensions io meta algorithm ts poptypes
+SUBDIRS = internal tags sugar gsl extensions io meta algorithm ts poptypes simfunctions
 pkginclude_HEADERS = debug.hpp \
 	diploid.hh \
 	fitness_models.hpp \
