move gsl_ran_discrete_t_ptr into main namespace from internal namespace. Fix missing include of GSLrng_t.hpp in Makefile.am

--- a/fwdpp/Makefile.am
+++ b/fwdpp/Makefile.am
@@ -24,7 +24,9 @@ pkginclude_HEADERS=debug.hpp \
 	mlocuspop.hpp \
 	popgenmut.hpp \
 	simparams.hpp \
-	wrapped_range.hpp
+	wrapped_range.hpp \
+	GSLrng_t.hpp \
+	gsl_discrete.hpp
 
 
 
