Remove mlocuspop source files. Rename slocuspop diploid_population.

--- a/fwdpp/Makefile.in
+++ b/fwdpp/Makefile.in
@@ -327,8 +327,7 @@ pkginclude_HEADERS = debug.hpp \
 	data_matrix.hpp \
 	recbinder.hpp \
 	named_type.hpp \
-	slocuspop.hpp \
-	mlocuspop.hpp \
+	diploid_population.hpp \
 	popgenmut.hpp \
 	simparams.hpp \
 	wrapped_range.hpp \
