Minimal changes for examples to compile.

--- a/examples/Makefile.in
+++ b/examples/Makefile.in
@@ -87,14 +87,13 @@ NORMAL_UNINSTALL = :
 PRE_UNINSTALL = :
 POST_UNINSTALL = :
 noinst_PROGRAMS = diploid_ind$(EXEEXT) diploid_fixed_sh_ind$(EXEEXT) \
-	K_linked_regions_multilocus$(EXEEXT) \
 	K_linked_regions_extensions$(EXEEXT) \
 	K_linked_regions_generalized_rec$(EXEEXT) \
 	juvenile_migration$(EXEEXT) custom_mutation$(EXEEXT) \
 	custom_diploid$(EXEEXT) $(am__EXEEXT_1)
 
 # examples based on tree sequences
-@BPO_PRESENT_TRUE@am__append_1 = wfts wfmlts spatialts
+@BPO_PRESENT_TRUE@am__append_1 = wfts spatialts
 @HAVE_LIBSEQ_RUNTIME_TRUE@@HAVE_SIMDATA_HPP_TRUE@am__append_2 = -DHAVE_LIBSEQUENCE
 @DEBUG_FALSE@am__append_3 = -DNDEBUG
 subdir = examples
@@ -108,8 +107,7 @@ mkinstalldirs = $(install_sh) -d
 CONFIG_HEADER = $(top_builddir)/config.h
 CONFIG_CLEAN_FILES =
 CONFIG_CLEAN_VPATH_FILES =
-@BPO_PRESENT_TRUE@am__EXEEXT_1 = wfts$(EXEEXT) wfmlts$(EXEEXT) \
-@BPO_PRESENT_TRUE@	spatialts$(EXEEXT)
+@BPO_PRESENT_TRUE@am__EXEEXT_1 = wfts$(EXEEXT) spatialts$(EXEEXT)
 PROGRAMS = $(noinst_PROGRAMS)
 am_K_linked_regions_extensions_OBJECTS =  \
 	K_linked_regions_extensions.$(OBJEXT)
@@ -123,12 +121,6 @@ K_linked_regions_generalized_rec_OBJECTS =  \
 	$(am_K_linked_regions_generalized_rec_OBJECTS)
 K_linked_regions_generalized_rec_LDADD = $(LDADD)
 K_linked_regions_generalized_rec_DEPENDENCIES =
-am_K_linked_regions_multilocus_OBJECTS =  \
-	K_linked_regions_multilocus.$(OBJEXT)
-K_linked_regions_multilocus_OBJECTS =  \
-	$(am_K_linked_regions_multilocus_OBJECTS)
-K_linked_regions_multilocus_LDADD = $(LDADD)
-K_linked_regions_multilocus_DEPENDENCIES =
 am_custom_diploid_OBJECTS = custom_diploid.$(OBJEXT)
 custom_diploid_OBJECTS = $(am_custom_diploid_OBJECTS)
 custom_diploid_LDADD = $(LDADD)
@@ -153,11 +145,6 @@ am__spatialts_SOURCES_DIST = spatialts.cc
 @BPO_PRESENT_TRUE@am_spatialts_OBJECTS = spatialts.$(OBJEXT)
 spatialts_OBJECTS = $(am_spatialts_OBJECTS)
 spatialts_DEPENDENCIES =
-am__wfmlts_SOURCES_DIST = wfmlts.cc tree_sequence_examples_common.cc
-@BPO_PRESENT_TRUE@am_wfmlts_OBJECTS = wfmlts.$(OBJEXT) \
-@BPO_PRESENT_TRUE@	tree_sequence_examples_common.$(OBJEXT)
-wfmlts_OBJECTS = $(am_wfmlts_OBJECTS)
-wfmlts_DEPENDENCIES =
 am__wfts_SOURCES_DIST = wfts.cc tree_sequence_examples_common.cc
 @BPO_PRESENT_TRUE@am_wfts_OBJECTS = wfts.$(OBJEXT) \
 @BPO_PRESENT_TRUE@	tree_sequence_examples_common.$(OBJEXT)
@@ -180,12 +167,11 @@ depcomp = $(SHELL) $(top_srcdir)/depcomp
 am__maybe_remake_depfiles = depfiles
 am__depfiles_remade = ./$(DEPDIR)/K_linked_regions_extensions.Po \
 	./$(DEPDIR)/K_linked_regions_generalized_rec.Po \
-	./$(DEPDIR)/K_linked_regions_multilocus.Po \
 	./$(DEPDIR)/custom_diploid.Po ./$(DEPDIR)/custom_mutation.Po \
 	./$(DEPDIR)/diploid_fixed_sh_ind.Po ./$(DEPDIR)/diploid_ind.Po \
 	./$(DEPDIR)/juvenile_migration.Po ./$(DEPDIR)/spatialts.Po \
 	./$(DEPDIR)/tree_sequence_examples_common.Po \
-	./$(DEPDIR)/wfmlts.Po ./$(DEPDIR)/wfts.Po
+	./$(DEPDIR)/wfts.Po
 am__mv = mv -f
 CXXCOMPILE = $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) \
 	$(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS)
@@ -214,18 +200,16 @@ am__v_CCLD_0 = @echo "  CCLD    " $@;
 am__v_CCLD_1 = 
 SOURCES = $(K_linked_regions_extensions_SOURCES) \
 	$(K_linked_regions_generalized_rec_SOURCES) \
-	$(K_linked_regions_multilocus_SOURCES) \
 	$(custom_diploid_SOURCES) $(custom_mutation_SOURCES) \
 	$(diploid_fixed_sh_ind_SOURCES) $(diploid_ind_SOURCES) \
 	$(juvenile_migration_SOURCES) $(spatialts_SOURCES) \
-	$(wfmlts_SOURCES) $(wfts_SOURCES)
+	$(wfts_SOURCES)
 DIST_SOURCES = $(K_linked_regions_extensions_SOURCES) \
 	$(K_linked_regions_generalized_rec_SOURCES) \
-	$(K_linked_regions_multilocus_SOURCES) \
 	$(custom_diploid_SOURCES) $(custom_mutation_SOURCES) \
 	$(diploid_fixed_sh_ind_SOURCES) $(diploid_ind_SOURCES) \
 	$(juvenile_migration_SOURCES) $(am__spatialts_SOURCES_DIST) \
-	$(am__wfmlts_SOURCES_DIST) $(am__wfts_SOURCES_DIST)
+	$(am__wfts_SOURCES_DIST)
 am__can_run_installinfo = \
   case $$AM_UPDATE_INFO_DIR in \
     n|no|NO) false;; \
@@ -352,7 +336,6 @@ top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 diploid_ind_SOURCES = diploid_ind.cc common_ind.hpp
 diploid_fixed_sh_ind_SOURCES = diploid_fixed_sh_ind.cc common_ind.hpp
-K_linked_regions_multilocus_SOURCES = K_linked_regions_multilocus.cc common_ind.hpp
 K_linked_regions_extensions_SOURCES = K_linked_regions_extensions.cc common_ind.hpp
 K_linked_regions_generalized_rec_SOURCES = K_linked_regions_generalized_rec.cc common_ind.hpp
 juvenile_migration_SOURCES = juvenile_migration.cc common_ind.hpp
@@ -360,8 +343,6 @@ custom_mutation_SOURCES = custom_mutation.cc common_ind.hpp
 custom_diploid_SOURCES = custom_diploid.cc common_ind.hpp
 @BPO_PRESENT_TRUE@wfts_SOURCES = wfts.cc tree_sequence_examples_common.cc
 @BPO_PRESENT_TRUE@wfts_LDADD = -lboost_program_options
-@BPO_PRESENT_TRUE@wfmlts_SOURCES = wfmlts.cc tree_sequence_examples_common.cc
-@BPO_PRESENT_TRUE@wfmlts_LDADD = -lboost_program_options
 @BPO_PRESENT_TRUE@spatialts_SOURCES = spatialts.cc
 @BPO_PRESENT_TRUE@spatialts_LDADD = -lboost_program_options
 AM_CPPFLAGS = -Wall -W -I. $(am__append_3)
@@ -413,10 +394,6 @@ K_linked_regions_generalized_rec$(EXEEXT): $(K_linked_regions_generalized_rec_OB
 	@rm -f K_linked_regions_generalized_rec$(EXEEXT)
 	$(AM_V_CXXLD)$(CXXLINK) $(K_linked_regions_generalized_rec_OBJECTS) $(K_linked_regions_generalized_rec_LDADD) $(LIBS)
 
-K_linked_regions_multilocus$(EXEEXT): $(K_linked_regions_multilocus_OBJECTS) $(K_linked_regions_multilocus_DEPENDENCIES) $(EXTRA_K_linked_regions_multilocus_DEPENDENCIES) 
-	@rm -f K_linked_regions_multilocus$(EXEEXT)
-	$(AM_V_CXXLD)$(CXXLINK) $(K_linked_regions_multilocus_OBJECTS) $(K_linked_regions_multilocus_LDADD) $(LIBS)
-
 custom_diploid$(EXEEXT): $(custom_diploid_OBJECTS) $(custom_diploid_DEPENDENCIES) $(EXTRA_custom_diploid_DEPENDENCIES) 
 	@rm -f custom_diploid$(EXEEXT)
 	$(AM_V_CXXLD)$(CXXLINK) $(custom_diploid_OBJECTS) $(custom_diploid_LDADD) $(LIBS)
@@ -441,10 +418,6 @@ spatialts$(EXEEXT): $(spatialts_OBJECTS) $(spatialts_DEPENDENCIES) $(EXTRA_spati
 	@rm -f spatialts$(EXEEXT)
 	$(AM_V_CXXLD)$(CXXLINK) $(spatialts_OBJECTS) $(spatialts_LDADD) $(LIBS)
 
-wfmlts$(EXEEXT): $(wfmlts_OBJECTS) $(wfmlts_DEPENDENCIES) $(EXTRA_wfmlts_DEPENDENCIES) 
-	@rm -f wfmlts$(EXEEXT)
-	$(AM_V_CXXLD)$(CXXLINK) $(wfmlts_OBJECTS) $(wfmlts_LDADD) $(LIBS)
-
 wfts$(EXEEXT): $(wfts_OBJECTS) $(wfts_DEPENDENCIES) $(EXTRA_wfts_DEPENDENCIES) 
 	@rm -f wfts$(EXEEXT)
 	$(AM_V_CXXLD)$(CXXLINK) $(wfts_OBJECTS) $(wfts_LDADD) $(LIBS)
@@ -457,7 +430,6 @@ distclean-compile:
 
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/K_linked_regions_extensions.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/K_linked_regions_generalized_rec.Po@am__quote@ # am--include-marker
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/K_linked_regions_multilocus.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/custom_diploid.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/custom_mutation.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/diploid_fixed_sh_ind.Po@am__quote@ # am--include-marker
@@ -465,7 +437,6 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/juvenile_migration.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/spatialts.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/tree_sequence_examples_common.Po@am__quote@ # am--include-marker
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/wfmlts.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/wfts.Po@am__quote@ # am--include-marker
 
 $(am__depfiles_remade):
@@ -616,7 +587,6 @@ clean-am: clean-generic clean-noinstPROGRAMS mostlyclean-am
 distclean: distclean-am
 		-rm -f ./$(DEPDIR)/K_linked_regions_extensions.Po
 	-rm -f ./$(DEPDIR)/K_linked_regions_generalized_rec.Po
-	-rm -f ./$(DEPDIR)/K_linked_regions_multilocus.Po
 	-rm -f ./$(DEPDIR)/custom_diploid.Po
 	-rm -f ./$(DEPDIR)/custom_mutation.Po
 	-rm -f ./$(DEPDIR)/diploid_fixed_sh_ind.Po
@@ -624,7 +594,6 @@ distclean: distclean-am
 	-rm -f ./$(DEPDIR)/juvenile_migration.Po
 	-rm -f ./$(DEPDIR)/spatialts.Po
 	-rm -f ./$(DEPDIR)/tree_sequence_examples_common.Po
-	-rm -f ./$(DEPDIR)/wfmlts.Po
 	-rm -f ./$(DEPDIR)/wfts.Po
 	-rm -f Makefile
 distclean-am: clean-am distclean-compile distclean-generic \
@@ -673,7 +642,6 @@ installcheck-am:
 maintainer-clean: maintainer-clean-am
 		-rm -f ./$(DEPDIR)/K_linked_regions_extensions.Po
 	-rm -f ./$(DEPDIR)/K_linked_regions_generalized_rec.Po
-	-rm -f ./$(DEPDIR)/K_linked_regions_multilocus.Po
 	-rm -f ./$(DEPDIR)/custom_diploid.Po
 	-rm -f ./$(DEPDIR)/custom_mutation.Po
 	-rm -f ./$(DEPDIR)/diploid_fixed_sh_ind.Po
@@ -681,7 +649,6 @@ maintainer-clean: maintainer-clean-am
 	-rm -f ./$(DEPDIR)/juvenile_migration.Po
 	-rm -f ./$(DEPDIR)/spatialts.Po
 	-rm -f ./$(DEPDIR)/tree_sequence_examples_common.Po
-	-rm -f ./$(DEPDIR)/wfmlts.Po
 	-rm -f ./$(DEPDIR)/wfts.Po
 	-rm -f Makefile
 maintainer-clean-am: distclean-am maintainer-clean-generic
