bufdo % s/gamete/haploid_genome/ge | update

--- a/fwdpp/internal/Makefile.am
+++ b/fwdpp/internal/Makefile.am
@@ -3,7 +3,7 @@ pkgincludedir=$(prefix)/include/fwdpp/internal
 pkginclude_HEADERS=mutation_internal.hpp \
 	rec_gamete_updater.hpp \
 	recombination_common.hpp \
-	gamete_cleaner.hpp \
+	haploid_genome_cleaner.hpp \
 	sample_diploid_helpers.hpp \
 	type_traits.hpp \
 	data_matrix_details.hpp \
