--- a/fwdpp/internal/Makefile.in
+++ b/fwdpp/internal/Makefile.in
@@ -268,7 +268,7 @@ top_srcdir = @top_srcdir@
 pkginclude_HEADERS = mutation_internal.hpp \
 	rec_gamete_updater.hpp \
 	recombination_common.hpp \
-	gamete_cleaner.hpp \
+	haploid_genome_cleaner.hpp \
 	sample_diploid_helpers.hpp \
 	type_traits.hpp \
 	data_matrix_details.hpp \
