First steps of porting the "genetic map unit" concept from fwdpy11 into fwdpp.  Also added util::absract_cloneable.

--- a/fwdpp/Makefile.am
+++ b/fwdpp/Makefile.am
@@ -1,6 +1,6 @@
 pkgincludedir=$(prefix)/include/fwdpp
 
-SUBDIRS=internal tags sugar gsl extensions io meta algorithm ts poptypes simfunctions
+SUBDIRS=internal tags sugar gsl extensions io meta algorithm ts poptypes simfunctions genetic_map
 pkginclude_HEADERS=debug.hpp \
 	diploid.hh \
 	fitness_models.hpp \
