--- a/testsuite/Makefile.in
+++ b/testsuite/Makefile.in
@@ -132,7 +132,8 @@ am__unit_fwdpp_unit_tests_SOURCES_DIST = unit/fwdpp_unit_tests.cc \
 	unit/test_general_rec_variation.cc \
 	unit/test_mutate_recombine.cc unit/test_sampling.cc \
 	unit/test_simparams.cc unit/test_wrapped_range.cc \
-	unit/test_recombination.cc fixtures/sugar_fixtures.cc
+	unit/test_recombination.cc unit/test_genetic_map.cc \
+	fixtures/sugar_fixtures.cc
 @BUNIT_TEST_PRESENT_TRUE@am_unit_fwdpp_unit_tests_OBJECTS =  \
 @BUNIT_TEST_PRESENT_TRUE@	unit/fwdpp_unit_tests.$(OBJEXT) \
 @BUNIT_TEST_PRESENT_TRUE@	unit/mutateTest.$(OBJEXT) \
@@ -148,6 +149,7 @@ am__unit_fwdpp_unit_tests_SOURCES_DIST = unit/fwdpp_unit_tests.cc \
 @BUNIT_TEST_PRESENT_TRUE@	unit/test_simparams.$(OBJEXT) \
 @BUNIT_TEST_PRESENT_TRUE@	unit/test_wrapped_range.$(OBJEXT) \
 @BUNIT_TEST_PRESENT_TRUE@	unit/test_recombination.$(OBJEXT) \
+@BUNIT_TEST_PRESENT_TRUE@	unit/test_genetic_map.$(OBJEXT) \
 @BUNIT_TEST_PRESENT_TRUE@	fixtures/sugar_fixtures.$(OBJEXT)
 unit_fwdpp_unit_tests_OBJECTS = $(am_unit_fwdpp_unit_tests_OBJECTS)
 unit_fwdpp_unit_tests_LDADD = $(LDADD)
@@ -200,6 +202,7 @@ am__depfiles_remade = fixtures/$(DEPDIR)/sugar_fixtures.Po \
 	unit/$(DEPDIR)/sugar_popgenmut.Po \
 	unit/$(DEPDIR)/sugar_unit_tests.Po \
 	unit/$(DEPDIR)/test_general_rec_variation.Po \
+	unit/$(DEPDIR)/test_genetic_map.Po \
 	unit/$(DEPDIR)/test_mutate_recombine.Po \
 	unit/$(DEPDIR)/test_recombination.Po \
 	unit/$(DEPDIR)/test_sampling.Po \
@@ -569,6 +572,7 @@ top_srcdir = @top_srcdir@
 @BUNIT_TEST_PRESENT_TRUE@	unit/test_simparams.cc \
 @BUNIT_TEST_PRESENT_TRUE@	unit/test_wrapped_range.cc \
 @BUNIT_TEST_PRESENT_TRUE@	unit/test_recombination.cc \
+@BUNIT_TEST_PRESENT_TRUE@	unit/test_genetic_map.cc \
 @BUNIT_TEST_PRESENT_TRUE@	fixtures/sugar_fixtures.cc
 
 @BUNIT_TEST_PRESENT_TRUE@unit_extensions_unit_tests_SOURCES = unit/extensions_unit_test.cc unit/extensions_regionsTest.cc unit/extensions_callbacksTest.cc
@@ -700,6 +704,8 @@ unit/test_wrapped_range.$(OBJEXT): unit/$(am__dirstamp) \
 	unit/$(DEPDIR)/$(am__dirstamp)
 unit/test_recombination.$(OBJEXT): unit/$(am__dirstamp) \
 	unit/$(DEPDIR)/$(am__dirstamp)
+unit/test_genetic_map.$(OBJEXT): unit/$(am__dirstamp) \
+	unit/$(DEPDIR)/$(am__dirstamp)
 
 unit/fwdpp_unit_tests$(EXEEXT): $(unit_fwdpp_unit_tests_OBJECTS) $(unit_fwdpp_unit_tests_DEPENDENCIES) $(EXTRA_unit_fwdpp_unit_tests_DEPENDENCIES) unit/$(am__dirstamp)
 	@rm -f unit/fwdpp_unit_tests$(EXEEXT)
@@ -750,6 +756,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@unit/$(DEPDIR)/sugar_popgenmut.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@unit/$(DEPDIR)/sugar_unit_tests.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@unit/$(DEPDIR)/test_general_rec_variation.Po@am__quote@ # am--include-marker
+@AMDEP_TRUE@@am__include@ @am__quote@unit/$(DEPDIR)/test_genetic_map.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@unit/$(DEPDIR)/test_mutate_recombine.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@unit/$(DEPDIR)/test_recombination.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@unit/$(DEPDIR)/test_sampling.Po@am__quote@ # am--include-marker
@@ -1118,6 +1125,7 @@ distclean: distclean-am
 	-rm -f unit/$(DEPDIR)/sugar_popgenmut.Po
 	-rm -f unit/$(DEPDIR)/sugar_unit_tests.Po
 	-rm -f unit/$(DEPDIR)/test_general_rec_variation.Po
+	-rm -f unit/$(DEPDIR)/test_genetic_map.Po
 	-rm -f unit/$(DEPDIR)/test_mutate_recombine.Po
 	-rm -f unit/$(DEPDIR)/test_recombination.Po
 	-rm -f unit/$(DEPDIR)/test_sampling.Po
@@ -1190,6 +1198,7 @@ maintainer-clean: maintainer-clean-am
 	-rm -f unit/$(DEPDIR)/sugar_popgenmut.Po
 	-rm -f unit/$(DEPDIR)/sugar_unit_tests.Po
 	-rm -f unit/$(DEPDIR)/test_general_rec_variation.Po
+	-rm -f unit/$(DEPDIR)/test_genetic_map.Po
 	-rm -f unit/$(DEPDIR)/test_mutate_recombine.Po
 	-rm -f unit/$(DEPDIR)/test_recombination.Po
 	-rm -f unit/$(DEPDIR)/test_sampling.Po
