--- a/fwdpp/genetic_map/Makefile.am
+++ b/fwdpp/genetic_map/Makefile.am
@@ -2,5 +2,6 @@ pkgincludedir=$(prefix)/include/fwdpp/genetic_map
 
 pkginclude_HEADERS=genetic_map_unit.hpp \
 				   poisson_interval.hpp \
+				   poisson_point.hpp \
 				   genetic_map.hpp
 
