--- a/fwdpp/genetic_map/Makefile.in
+++ b/fwdpp/genetic_map/Makefile.in
@@ -266,7 +266,9 @@ top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 pkginclude_HEADERS = genetic_map_unit.hpp \
-				   poisson_interval.hpp
+				   poisson_interval.hpp \
+				   poisson_point.hpp \
+				   genetic_map.hpp
 
 all: all-am
 
